# TruthLens

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  AUDIT_REPORT.md  COPY_PASTE_PROMPTS.md  Dockerfile  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  apply_professional_docs.sh  docker-compose.yml  mirror_test.txt  pyproject.toml  requirements.txt  sync_to_gitlab.sh  update_repo_v2.sh
.cursor/rules/: truthlens-capstone.mdc
.github/workflows/: ci.yml  gitlab-mirror.yml  security.yml
backend/: __init__.py  data_collector.py  main.py  nlp_processor.py
bot/: __init__.py  main.py  telegram_bot.py
dashboard/: app.py
docs/: MENTOR_SUBMISSION.md  SECURITY.md
docs/capstone/: CURSOR_CHAT_CONTEXT.md  MENTOR_BRIEFING_SUMMARY.md  NOTEBOOK_INTEGRATION.md  PROJECT_STATUS_MARCH2026.md  README_CAPSTONE.md  THESIS_STRUCTURE.md  WEEKLY_REPORT_TEMPLATE.md
docs/design_prototypes/: readme.txt
docs/reports/: progress.json
frontend/: __init__.py  dashboard.py
ml/: __init__.py  analyzer.py  crew_agents.py  fake_news_classifier.py  mlflow_config.yaml  rag_pipeline.py  topic_modeler.py
notebooks/: 01_isot_fake_news_detection.ipynb  TruthLens_Capstone_Project.ipynb  notebooks_01_isot_fake_news_detection_mlflow.ipynb
scripts/: init-db.sql
src/: __init__.py
src/api/: __init__.py  main.py
src/bot/: __init__.py  main.py
src/dashboard/: __init__.py  app.py
src/ml/: __init__.py  analyzer.py
src/models/: train.py
src/nlp/: base_model.py  data_loader.py
src/ui/: dashboard.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_core.py  test_data_collector.py  test_nlp_processor.py  test_rag_pipeline.py
web-app/: README.md  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx  index.css
