# TruthLens - Project Configuration
# ==================================
# Author: 102012dl

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthlens"
version = "1.0.0"
description = "AI-Powered Information Credibility Analysis Platform"
readme = "README.md"
authors = [
    {name = "102012dl", email = "102012dl@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["nlp", "ml", "fact-checking", "misinformation", "credibility"]

[project.urls]
"Homepage" = "https://github.com/102012dl/truthlens"
"Bug Tracker" = "https://github.com/102012dl/truthlens/issues"
"Documentation" = "https://github.com/102012dl/truthlens#readme"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | venv
  | .git
  | .mypy_cache
  | .pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "venv", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]
